# Atom-NeptuneSDR-Firmware

./: .gitignore  LICENSE  MANIFEST.in  NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
LICENSES/: BSD-2-Clause.txt
board/p210/: README.md  build-plan.json  profile.json  source-lock.json  toolchain-lock.json
board/p210/config/: calibration-defaults.json  device-policy.json  kernel-required.json  rootfs-policy.json  u-boot.env
docs/: ACCEPTANCE.md  BOARD_BUILD.md  CALIBRATION.md  HARDWARE_EVIDENCE.md  NEPTUNE_EDGE_ARCHITECTURE.md  P210_FFT_ABI.md  PROVENANCE.md  RECOVERY.md
hdl/: README.md
hdl/constraints/: README.md
hdl/rtl/core/: neptune_block_stats.sv  neptune_cic_decimator.sv  neptune_coefficient_banks.sv  neptune_config_commit.sv  neptune_crc32c.sv  neptune_cross_accumulator.sv  neptune_data_header_builder.sv  neptune_dc_correct.sv  neptune_ddc_mixer.sv  neptune_energy_detector.sv  neptune_nco.sv  neptune_pack_samples.sv  neptune_peak_detector.sv  neptune_quantize_s8.sv  neptune_rate_scheduler.sv  neptune_register_file.sv  neptune_resampler_55m.sv  neptune_rx_ingress.sv  neptune_rx_pipeline.sv  neptune_s8bf_buffer.sv  neptune_sample_clock.sv  neptune_sample_pkg.sv  neptune_stft_scheduler.sv  neptune_trigger_controller.sv  neptune_tx_safety_gate.sv  neptune_validity_tracker.sv  neptune_widely_linear_correct.sv  neptune_window_multiply.sv
hdl/scripts/: check_hdl.py  generate_resampler.py
hdl/tb/: tb_neptune_block_stats.sv  tb_neptune_cic_decimator.sv  tb_neptune_coefficient_banks.sv  tb_neptune_cross_accumulator.sv  tb_neptune_data_header_builder.sv  tb_neptune_ddc_mixer.sv  tb_neptune_pack_samples.sv  tb_neptune_quantize_s8.sv  tb_neptune_rate_scheduler.sv  tb_neptune_register_file.sv  tb_neptune_rx_ingress.sv  tb_neptune_rx_pipeline.sv  tb_neptune_s8bf_buffer.sv  tb_neptune_s8bf_revision_boundary.sv  tb_neptune_sample_clock.sv  tb_neptune_stft_scheduler.sv  tb_neptune_trigger_controller.sv  tb_neptune_tx_safety_gate.sv
protocol/: README.md
protocol/golden/: neptune_edge_v1_vectors.json
ps/control-daemon/: Makefile  README.md
ps/control-daemon/include/: necp_daemon.h
ps/control-daemon/src/: backend_linux.c  backend_mock.c  main.c  necp.c  transport.c
ps/control-daemon/tests/: test_necp.c
ps/data-service/: Makefile  README.md
ps/data-service/include/: neptune_data_service.h
ps/data-service/src/: dma_ring_linux.c  dma_ring_mock.c  main.c  packet.c  service.c  udp_sink.c
ps/data-service/tests/: check_packet_fixture.py  emit_packet_fixture.c  test_data_service.c
ps/include/: neptune_pl_registers_v1.h  neptune_stream_uapi.h
ps/kernel/neptune_stream/: Kconfig  Makefile  README.md  neptune_stream.c  neptune_stream_regs.h
ps/kernel/neptune_stream/Documentation/devicetree/bindings/misc/: hamgeek,neptune-stream-dma-v1.yaml
ps/kernel/neptune_stream/tests/: test_neptune_stream.py  uapi_layout.c
ps/kernel/neptune_stream/tests/include/linux/: ioctl.h  types.h
scripts/: board_doctor.py  build_board.py  build_bundle.sh  check.sh  fetch_firmware.py  generate_edge_profile.py  generate_protocol.py  generate_registers.py  prepare_runtime.py  qemu_boot.py  test_firmware.py
specs/: golden-arithmetic-v1.md  neptune-calibration-bundle-v1.json  neptune-edge-control-v1.json  neptune-edge-data-v1.json  neptune-pl-registers-v1.json  neptune-update-manifest-v1.json  p210-firmware-interface-v1.json  p210-firmware-interface-v2.json  p210-hardware-manifest-v1.schema.json
src/neptunesdr_firmware/: __init__.py  cli.py  errors.py  firmware.py  interface.py  locks.py  manifest.py  provenance.py
src/neptunesdr_firmwave/: __init__.py  board_build.py  calibration.py  cli.py  errors.py  hardware_manifest.py  interface.py  manifest.py  provenance.py  update_manifest.py  version.py
src/neptunesdr_firmwave/data/: p210-hardware-candidate-v1.json
tests/: __init__.py  test_artifacts.py  test_board_build.py  test_calibration_store.py  test_distribution.py  test_edge_profile_manifest.py  test_edge_protocol_v1.py  test_hardware_manifest.py  test_hdl_source.py  test_interface_manifest.py  test_pl_registers.py  test_provenance_cli.py  test_source_boundaries.py  test_transport_budget.py  test_update_manifest.py  test_vivado_worker.py
tools/benchmark/: transport_budget.py
tools/host/: Makefile  README.md  neptune_ctl.py  neptune_edge_host.py  neptune_rx.py
tools/host/tests/: test_host_tools.py
tools/release/: verify_distribution.py
tools/vivado/: README.md  install-vivado-2023.2.sh  lima-vivado-2023.2.yaml  vm.sh
