[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "neptunesdr-firmware"
version = "1.0.0"
description = "Audited firmware inputs and QEMU-development runtime for NeptuneSDR/HAMGEEK P210"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Atom-NeptuneSDR-Firmware contributors" }]
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/PhysicistJohn/Atom-NeptuneSDR-Firmware"
Issues = "https://github.com/PhysicistJohn/Atom-NeptuneSDR-Firmware/issues"

[project.scripts]
neptune-firmware = "neptunesdr_firmware.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
neptunesdr_firmware = ["data/*.json"]

[tool.setuptools.data-files]
"share/neptunesdr-firmware/specs" = ["specs/p210-firmware-interface-v1.json"]
"share/neptunesdr-firmware/docs" = ["docs/P210_FFT_ABI.md"]
